--- a/index.html
+++ b/index.html
@@ -21,5 +21,7 @@
         <div class="title">New Unity Project</div>
       </div>
     </div>
+
+    <a href="idiltayhan.github.io/myfirsthtmltry/index.html"</a>
   </body>
 </html>
