--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <body>
     
 
-    <a href="idiltayhan.github.io/myfirsthtmltry/index.html"</a>
+    <a href="/myfirsthtmltry/index.html"</a>
   </body>
 </html>
