--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-us">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity WebGL Player | New Unity Project</title>
-    
-  </head>
-  <body>
-    
 
-      <a href="index2.html">my link</a>
-  </body>
+</head>
+<body>
+    <a href="indexExhibit.html">my link</a>
+</body>
 </html>
