--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | New Unity Project</title>
+    <title>Idil Tayhan / Projects</title>
 
 </head>
 <body>
-    <a href="indexExhibit.html">my link</a>
+    <h1>Idil Tayhan / Interactive Projects Portfolio</h1>
+    <p>Please visit links below ---> </p>
+    <a href="geopostersmain/geoposters.html">GeoPosters Sanal Sergisi (GeoPosters Virtual Exhibition)</a>
 </body>
 </html>
