--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Idil Tayhan / Interactive Projects Portfolio</h1>
     <p>Please visit links below ---> </p>
-    <a href="geopostersmain/index.html">GeoPosters Sanal Sergisi (GeoPosters Virtual Exhibition)</a>
+    <a href="geoposters.html">GeoPosters Sanal Sergisi (GeoPosters Virtual Exhibition)</a>
 </body>
 </html>
