--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
 </head>
 <body>
-    <h1>Idil Tayhan / Interactive Projects Portfolio</h1>
-    <p>Please visit links below ---> </p>
+    <h1>Idil Tayhan / Interactive Projects Portfolio (Academics)</h1>
+    <p>Please visit links below for interactive projects, mostly done for phD studies and/or featured on my academic papers. ---> </p>
     <a href="geoposters.html">GeoPosters Sanal Sergisi (GeoPosters Virtual Exhibition)</a>
 </body>
 </html>
