--- a/index.html
+++ b/index.html
@@ -1,14 +1,35 @@
 <!DOCTYPE html>
 <html lang="en-us">
-<head>
+  <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Idil Tayhan / Projects</title>
+    <title>Unity WebGL Player | Okyanus Kirliliği 2</title>
+    <link rel="shortcut icon" href="TemplateData/favicon.ico">
+    <link rel="stylesheet" href="TemplateData/style.css">
+    <script src="TemplateData/UnityProgress.js"></script>
+    <script src="Build/UnityLoader.js"></script>
+    <script>
+        var unityInstance = UnityLoader.instantiate("unityContainer", "Build/test1.json", { onProgress: UnityProgress });
+        window.addEventListener("resize", onResize);
 
-</head>
-<body>
-    <h1>Idil Tayhan / Interactive Projects Portfolio (Academics)</h1>
-    <p>Please visit links below for interactive projects, mostly done for phD studies and/or featured on my academic papers. ---> </p>
-    <a href="geoposters.html">GeoPosters Sanal Sergisi (GeoPosters Virtual Exhibition)</a>
-</body>
+        function onResize()
+        {
+            unityInstance.SendMessage("DebugText", "SetWidth", window.innerWidth);
+            unityInstance.SendMessage("DebugText", "SetHeight", window.innerHeight);
+            unityInstance.SendMessage("DebugText", "OnResize");
+        }
+    </script>
+  </head>
+  <body>
+      <div class="webgl-content" style="display:table;width:100%; height:100%;">
+          <div id="unityContainer"></div>
+      </div>
+      <script>
+          var myWidth = innerWidth;
+          var myHeight = innerHeight;
+          document.getElementById("unityContainer").style.width = myWidth + "px";
+          document.getElementById("unityContainer").style.height = myHeight + "px";
+      </script>
+
+  </body>
 </html>
