--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Okyanus Kirliliği 2</title>
+    <title>Unity WebGL Player | SürdürülebilirGrafikFinal</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
     <script src="TemplateData/UnityProgress.js"></script>
     <script src="Build/UnityLoader.js"></script>
     <script>
-        var unityInstance = UnityLoader.instantiate("unityContainer", "Build/test1.json", { onProgress: UnityProgress });
+        var unityInstance = UnityLoader.instantiate("unityContainer", "Build/webgltest.json", { onProgress: UnityProgress });
         window.addEventListener("resize", onResize);
-
         function onResize()
         {
             unityInstance.SendMessage("DebugText", "SetWidth", window.innerWidth);
@@ -20,16 +19,7 @@
         }
     </script>
   </head>
-  <body>
-      <div class="webgl-content" style="display:table;width:100%; height:100%;">
-          <div id="unityContainer"></div>
-      </div>
-      <script>
-          var myWidth = innerWidth;
-          var myHeight = innerHeight;
-          document.getElementById("unityContainer").style.width = myWidth + "px";
-          document.getElementById("unityContainer").style.height = myHeight + "px";
-      </script>
-
+  <body style="margin:0; overflow:hidden;">
+   <div id="unityContainer" style=" width: 100%; height: 100%"></div>   
   </body>
 </html>
