--- a/index.html
+++ b/index.html
@@ -19,7 +19,16 @@
         }
     </script>
   </head>
-  <body style="margin:0; overflow:hidden;">
-   <div id="unityContainer" style=" width: 100%; height: 100%"></div>   
+  <body>
+      <div class="webgl-content" style="display:table;width:100%; height:100%;">
+          <div id="unityContainer"></div>
+      </div>
+      <script>
+          var myWidth = innerWidth;
+          var myHeight = innerHeight;
+          document.getElementById("unityContainer").style.width = myWidth + "px";
+          document.getElementById("unityContainer").style.height = myHeight + "px";
+      </script>
+
   </body>
 </html>
