--- a/index.html
+++ b/index.html
@@ -8,7 +8,23 @@
 </head>
 <body>
     <div class="container">
-        <h1>TOBB ETÜ GİT Proje Değerlendirme Sistemi</h1>
+        <p class="site-disclaimer">
+Bu platform, TOBB ETÜ Görsel İletişim Tasarımı bölümünde öğretim görevlisi olarak görev yapan İdil Özdemir tarafından, yalnızca <strong>Görsel İletişim Tasarımı bölümü öğretim görevlilerinin</strong> kendi not değerlendirme süreçlerinde kullanmaları amacıyla hazırlanmıştır. 
+<br><br>
+<strong>Bu web sitesi, TOBB Ekonomi ve Teknoloji Üniversitesi’ne ait resmi bir sistem değildir</strong> ve üniversite tarafından sağlanan veya onaylanan bir hizmeti temsil etmemektedir.
+<br><br>
+Bu sistem üzerinden yapılan not hesaplamaları ve girilen veriler <strong>yalnızca kullanıcı cihazında lokal olarak</strong> tutulmakta olup, herhangi bir merkezi sunucuya veya üniversite sistemine aktarılmamaktadır. 
+<br><br>
+<strong>Bu platformda hesaplanan notlar, üniversitenin resmi öğrenci bilgi sistemine otomatik olarak işlenmez</strong>. Transkripte yansıyacak olan nihai notlar, üniversitenin kendi resmi sistemine girilen notlardır. Bu nedenle, bu platformu sadece kişisel hesaplama ve planlama aracı olarak kullanınız.
+<br><br>
+Şu anda PDF dışa aktarma desteği bulunmamaktadır. Lütfen hesaplamalarınızı tamamladıktan sonra <strong>tablonun ve başarı oranlarının ekran görüntüsünü alarak</strong> kişisel arşivinize kaydediniz. Aksi takdirde verileriniz kaybolabilir ve yeniden hesaplama yapmanız gerekebilir.
+<br><br>
+<strong>Bu site üçüncü taraflara veya bölüm dışı kullanıcılara açık değildir</strong>. Bölüm dışı kişiler tarafından kullanılması açıkça yasaktır.
+<br><br>
+Bu platformun TOBB ETÜ veya başka bir kurumla <strong>resmi ya da hukuki bir bağı bulunmamaktadır</strong>. Kullanıcılar bu siteyi kullanarak, yukarıdaki koşulları kabul etmiş sayılır.
+</p>
+<h1>TOBB ETÜ GİT Proje Değerlendirme Yardımcı Aracı</h1>
+
 
         <div class="config-section">
             <h2>Yapılandırma</h2>
