--- a/index.html
+++ b/index.html
@@ -3,28 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TOBB ETÜ GİT Proje Değerlendirme Sistemi</title>
+    <title>Proje Değerlendirme Sistemi - hesaplayıcı</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <p class="site-disclaimer">
-Bu platform, TOBB ETÜ Görsel İletişim Tasarımı bölümünde öğretim görevlisi olarak görev yapan İdil Özdemir tarafından, yalnızca <strong>Görsel İletişim Tasarımı bölümü öğretim görevlilerinin</strong> kendi not değerlendirme süreçlerinde kullanmaları amacıyla hazırlanmıştır. 
+            <p class="site-disclaimer">
+Bu platform, not değerlendirme sürecinde kullanılmak üzere geliştirilmiştir.
 <br><br>
-<strong>Bu web sitesi, TOBB Ekonomi ve Teknoloji Üniversitesi’ne ait resmi bir sistem değildir</strong> ve üniversite tarafından sağlanan veya onaylanan bir hizmeti temsil etmemektedir.
+<strong>Bu web sitesi herhangi bir üniversiteye veya kuruma ait resmi bir sistem değildir</strong> ve resmi bir değerlendirme ya da not giriş platformu olarak kullanılmamalıdır.
 <br><br>
-Bu sistem üzerinden yapılan not hesaplamaları ve girilen veriler <strong>yalnızca kullanıcı cihazında lokal olarak</strong> tutulmakta olup, herhangi bir merkezi sunucuya veya üniversite sistemine aktarılmamaktadır. 
+Bu sistemde yapılan hesaplamalar ve girilen veriler <strong>yalnızca kullanıcı cihazında lokal olarak</strong> tutulur. Herhangi bir şekilde merkezi bir sunucuya ya da kurumsal sisteme aktarım yapılmaz.
 <br><br>
-<strong>Bu platformda hesaplanan notlar, üniversitenin resmi öğrenci bilgi sistemine otomatik olarak işlenmez</strong>. Transkripte yansıyacak olan nihai notlar, üniversitenin kendi resmi sistemine girilen notlardır. Bu nedenle, bu platformu sadece kişisel hesaplama ve planlama aracı olarak kullanınız.
+<strong>Bu platformda hesaplanan notlar, herhangi bir resmi not sistemine işlenmez</strong>
+PDF dışa aktarma desteği şu an için mevcut değildir. Lütfen hesaplama işlemleriniz tamamlandığında <strong>ekran görüntüsü alarak</strong> kişisel arşivinize kaydediniz. Aksi takdirde verileriniz kaybolabilir ve işlemleri yeniden yapmanız gerekebilir.
 <br><br>
-Şu anda PDF dışa aktarma desteği bulunmamaktadır. Lütfen hesaplamalarınızı tamamladıktan sonra <strong>tablonun ve başarı oranlarının ekran görüntüsünü alarak</strong> kişisel arşivinize kaydediniz. Aksi takdirde verileriniz kaybolabilir ve yeniden hesaplama yapmanız gerekebilir.
-<br><br>
-<strong>Bu site üçüncü taraflara veya bölüm dışı kullanıcılara açık değildir</strong>. Bölüm dışı kişiler tarafından kullanılması açıkça yasaktır.
-<br><br>
-Bu platformun TOBB ETÜ veya başka bir kurumla <strong>resmi ya da hukuki bir bağı bulunmamaktadır</strong>. Kullanıcılar bu siteyi kullanarak, yukarıdaki koşulları kabul etmiş sayılır.
-</p>
-<h1>TOBB ETÜ GİT Proje Değerlendirme Yardımcı Aracı</h1>
-
+<strong>Bu sistem, sadece yetkili kişiler tarafından kullanılmak üzere tasarlanmıştır</strong>. Dış kullanıcıların erişimi ve kullanımı kesinlikle yasaktır.
+        <h1>Proje Değerlendirme Sistemi - hesaplayıcı</h1>
 
         <div class="config-section">
             <h2>Yapılandırma</h2>
